using Prism.Events;

namespace BazaRoslin.Event {
    public class OfferFollowEvent : PubSubEvent<int> {
    }
}