using Prism.Events;

namespace BazaRoslin.Event {
    public class OfferUnfollowEvent : PubSubEvent<int> {
    }
}