using BazaRoslin.Model;
using Prism.Events;

namespace BazaRoslin.Event {
    public class UserPlantAddEvent : PubSubEvent<IPlant> {
    }
}