using Prism.Events;

namespace BazaRoslin.Event {
    public class UserPlantDeleteEvent : PubSubEvent<int> {
    }
}